--- a/webBanTiVi/src/main/resources/templates/admin/page/staff.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/staff.html
@@ -58,13 +58,11 @@
                             <div class="form-check form-check-inline mt-3">
                                 <input class="form-check-input" type="radio" th:field="*{gender}" id="inlineRadio1"
                                        th:value="true">
-                                value="true">
                                 <label class="form-check-label" for="inlineRadio1">Male</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" th:field="*{gender}" id="inlineRadio2"
                                        th:value="false">
-                                value="false">
                                 <label class="form-check-label" for="inlineRadio2">Female</label>
                             </div>
                         </div>
@@ -105,22 +103,18 @@
                                        value="false" th:field="*{active}">
                                 <label class="form-check-label" for="inlineRadio2">Non-Active</label>
                             </div>
-                            <div class="col-sm-4">
-                                <small class="text-light fw-semibold">Default</small>
-                                <div class="mt-3">
-                                    <!-- Button trigger modal -->
-                                    <div class="input-group">
-                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                                data-bs-target="#basicModal">
-                                            Position
-                                        </button>
-                                        <select class="form-select"
-                                                aria-label="Example select with button addon" th:field="*{position}">
-                                            <option th:value=10>Select Position</option>
-                                            <option th:value=0>Admin</option>
-                                            <option th:value=1>User</option>
-                                        </select>
-                                    </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="mt-3">
+                                <div class="input-group">
+                                    <button type="button" class="btn btn-primary">
+                                        Position
+                                    </button>
+                                    <select class="form-select"
+                                            aria-label="Example select with button addon" th:field="*{position}">
+                                        <option th:value="true">Admin</option>
+                                        <option th:value="false">User</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
