--- a/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
@@ -122,67 +122,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
-                        <div class="col-lg-6 col-md-3">
-                            <small class="text-light fw-semibold">Backdrop</small>
-                            <div class="mt-3">
-                                <div class="input-group">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal" style="width: 135px">
-                                        Guarantee
-                                    </button>
-                                    <select class="form-select"
-                                            aria-label="Example select with button addon">
-                                        <option selected="">Choose...</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
-                                    </select>
-                                </div>
-                                <!-- Modal -->
-                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
-                                     style="display: none;" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <form class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Modal title</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div class="row">
-                                                    <div class="col mb-3">
-                                                        <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" class="form-control"
-                                                               placeholder="Enter Name">
-                                                    </div>
-                                                </div>
-                                                <div class="row g-2">
-                                                    <div class="col mb-0">
-                                                        <label for="emailBackdrop" class="form-label">Email</label>
-                                                        <input type="text" class="form-control"
-                                                               placeholder="xxxx@xxx.xx">
-                                                    </div>
-                                                    <div class="col mb-0">
-                                                        <label for="dobBackdrop" class="form-label">DOB</label>
-                                                        <input type="text" class="form-control"
-                                                               placeholder="DD / MM / YY">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-outline-secondary"
-                                                        data-bs-dismiss="modal">
-                                                    Close
-                                                </button>
-                                                <button type="button" class="btn btn-primary">Save</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop orgin-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -243,7 +183,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop manufacture-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -304,7 +244,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop color-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -365,7 +305,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop type-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -373,7 +313,7 @@
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                             data-bs-target="#backDropModal" style="width: 135px">
-                                        Category
+                                        Type
                                     </button>
                                     <select class="form-select"
                                             aria-label="Example select with button addon">
@@ -426,7 +366,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop resolution-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -487,7 +427,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop -->
+                        <!-- Modal Backdrop size-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
