--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class="mb-3">
                                         <label class="form-label">Start Day:</label>
-                                        <input type="date" class="form-control" th:field="*{start_day}">
+                                        <input type="date" class="form-control" th:field="*{startDay}">
                                     </div>
 
                                 </div>
@@ -72,7 +72,7 @@
                                     </div>
                                     <div class="mb-3">
                                         <label class="form-label">Expiration Date:</label>
-                                        <input type="date" class="form-control" th:field="*{exDate}"/>
+                                        <input type="date" class="form-control" th:field="*{expirationDate}"/>
                                     </div>
                                 </div>
                             </div>
