--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -43,7 +43,7 @@
             </div>
             <div class="content-wrapper">
                 <div class="container-xxl flex-grow-1 container-p-y">
-                    <div th:replace="~{${pageView}}"></div>
+                    <div th:replace="~{${session.pageView}}"></div>
                 </div>
                 <div th:replace="~{/admin/layout/_footer.html}"></div>
                 <div class="content-backdrop fade"></div>
