--- a/webBanTiVi/src/main/resources/templates/admin/page/product/product_form.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/product_form.html
@@ -444,7 +444,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Modal Backdrop size-->
+                        <!-- Modal Backdrop Supplier-->
                         <div class="col-lg-6 col-md-3">
                             <small class="text-light fw-semibold">Backdrop</small>
                             <div class="mt-3">
@@ -453,6 +453,66 @@
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                             data-bs-target="#backDropModal" style="width: 135px">
                                         Size
+                                    </button>
+                                    <select class="form-select" id="inputGroupSelect03"
+                                            aria-label="Example select with button addon">
+                                        <option selected="">Choose...</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+                                <!-- Modal -->
+                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                     style="display: none;" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <form class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="row">
+                                                    <div class="col mb-3">
+                                                        <label for="nameBackdrop" class="form-label">Name</label>
+                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                               placeholder="Name">
+                                                    </div>
+                                                </div>
+                                                <div class="row g-2">
+                                                    <div class="col mb-0">
+                                                        <label for="emailBackdrop" class="form-label">ID</label>
+                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                               placeholder="ID">
+                                                    </div>
+                                                    <div class="col mb-0">
+                                                        <label for="dobBackdrop" class="form-label">Code</label>
+                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                               placeholder="Code">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-outline-secondary"
+                                                        data-bs-dismiss="modal">
+                                                    Close
+                                                </button>
+                                                <button type="button" class="btn btn-primary">Save</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-3">
+                            <small class="text-light fw-semibold">Backdrop</small>
+                            <div class="mt-3">
+                                <!-- Button trigger modal -->
+                                <div class="input-group">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#backDropModal" style="width: 135px">
+                                        Supplier
                                     </button>
                                     <select class="form-select" id="inputGroupSelect03"
                                             aria-label="Example select with button addon">
